--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,36 @@
-version: '3.8'
 
 services:
-  web:
-    build: .
-    command: sh -c "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
+  db:
+    image: postgres:15-alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=denuncias
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
+    ports:
+      - '5433:5432'
+
+  app:
+    build:
+      context: .
+    ports:
+      - "8000:8000"
     volumes:
       - .:/app
-      - ./staticfiles:/app/staticfiles
-      - ./media:/app/media
-      - ./db.sqlite3:/app/db.sqlite3  # Garantir que o banco SQLite seja persistente
-    ports:
-      - "127.0.0.1:8000:8000"
-    env_file:
-      - .env
-    restart: unless-stopped
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
+#      - POSTGRES_DB=denuncias
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_PASSWORD=root
+#      - POSTGRES_HOST=db
+#      - POSTGRES_PORT=5432
       - DEBUG=True
       - USE_SQLITE=True
+    depends_on:
+      - db
+
+volumes:
+  db_data:
